# EHRI-CATE

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: tests.yml
prompts/: example.toml
scripts/: build_omikuji_macos_arm64.sh
src/ehri_cate/: __init__.py  cli.py  corpus.py  rate_limit.py  scoring.py  split.py  vocab.py
src/ehri_cate/backends/: annif_backend.py  llm4ssh.py
tests/: test_annif_backend.py  test_cli_label.py  test_cli_models.py  test_prompt_template.py  test_rate_limit.py  test_scoring.py  test_split.py
wheels/: omikuji-0.5.1-cp312-cp312-macosx_11_0_arm64.whl
